Parser/test_cases/good/letnoinitmultiplebindings.cl
class Test {
  foo:Test;
  baz():String { let x:Int,y:String in x};
};
