Parser/test_cases/bad/let2badparens.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      let a : Int <- b(, b:Int, c:Int) in a + c  
   };
   
   bar() :Int {
      6
   };
   
   
};

